added method reference challenge